inclusao dos beneficios e ajustes

--- a/style.css
+++ b/style.css
@@ -1,11 +1,50 @@
-body {
+body {}
+
+.titulo-principal {
+    padding-left: 20px;
+}
+
+.principal {
     background-color: #CCCCCC;
+    padding: 30px;
+}
+
+.titulo-centralizado {
+    text-align: center;
+}
+
+#banner {
+    width: 100%;
 }
 
 p {
     text-align: center;
 }
 
+#missão {
+    font-size: 20px;
+}
+
 em strong {
     color: rgb(25, 87, 107);
+}
+
+.beneficios {
+    background-color: #FFFFFF;
+    padding: 20px;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.itens {
+    font-style: italic;
+}
+
+.imagembeneficios {
+    width: 50%;
 }
